--- a/app/meals/page.module.css
+++ b/app/meals/page.module.css
@@ -1,21 +1,17 @@
 .header {
     text-align: center;
-    padding: 2rem;
-    background-color: #f8f9fa;
+    /* padding: 2rem; */
+    /* background-color: #f8f9fa; */
 }
 
 .title { /* Add this class for the h1 */
-    font-size: 2.5rem;
+    font-size: 2rem;
     font-weight: bold;
-    margin-bottom: 1rem;
+    /* margin-bottom: 1rem; */
 }
 
 .highlight {
     color: #ff6347; /* Tomato color to highlight text */
-}
-
-.cta {
-    margin-top: 1rem;
 }
 
 .cta a {
@@ -33,3 +29,20 @@
     margin: 0 auto;
     padding: 2rem;
 }
+
+.loading {
+    text-align: center;
+    animation: loading 1.2s ease-in-out infinite;
+  }
+  
+  @keyframes loading {
+    0% {
+      color: #e9e9e9;
+    }
+    50% {
+      color: #b89b84;
+    }
+    100% {
+      color: #e9e9e9;
+    }
+  }
