--- a/app/globals.css
+++ b/app/globals.css
@@ -20,7 +20,10 @@ body {
   text-align: center;
 }
 
-.not-found h1,
+.not-found h1{
+  color: red;
+}
+
 .error h1 {
   font-size: 5rem;
   margin: 0px;
@@ -28,7 +31,7 @@ body {
   color: #262626;
   text-transform: uppercase;
   background: linear-gradient(90deg, #f9572a, #ffc905);
-  -webkit-background-clip: text;
+  -webkit-back-ground-clip: text;
   -webkit-text-fill-color: transparent;
   background-size: cover;
   background-position: center;
